# checkmcp

./: .gitignore  .mcp.json  DISTRIBUTION.md  Dockerfile  GATEWAY.md  LICENSE  README.md  VALIDITY.md  action.yml  agentic_samples.json  bench.py  bench_agentic.py  bench_samples.json  bench_samples_v2.json  conftest.py  import_mcpizy.py  mcpizy_autopublish.py  monitor_run.py  pyproject.toml  server.json  server.py
.github/workflows/: checkmcp-example.yml  publish-docker.yml  publish-pypi.yml  test.yml
benchmark/: README.md  candidates.txt  outcomes-2026-05-27.json  outcomes-v2-2026-05-27.json  outcomes-v2-consolidated-2026-05-29.json  outcomes-v2-full-2026-05-29.json  outcomes.py  screen.py  targets.json  validate.py
checkmcp/: __init__.py  badge.py  calibrate.py  cli.py  evals.py  gateway.py  mcp_server.py  monitor.py  optimize.py  page.py  plans.py  probe.py  repo.py  scanners.py  score.py  security.py  security_conformance.json  security_ruleset.json  store.py
examples/: deepwiki.html  embed.txt
integrations/mcpizy/: CheckMcpBadge.tsx  README.md  checkmcp.ts
scripts/: gen_security_ruleset.py
tests/: e2e.py  test_calibrate.py  test_evals.py  test_mcp_server.py  test_misc.py  test_monitor.py  test_score.py  test_security_conformance.py
tools/: prelaunch_audit.py
web/: .env.example  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: AuditInput.tsx  AuthForm.tsx  CopyButton.tsx  FollowButton.tsx  Report.tsx  (+3 more)
(+55 files in other folders)
