[project]
name = "checkmcp"
version = "0.4.0"
description = "CheckMCP — vendor-neutral quality/security/context-cost audit & score for any MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hugo" }]
keywords = ["mcp", "model-context-protocol", "audit", "score", "lint", "security", "gateway", "guardrail"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []  # stdlib-only core (urllib). tiktoken optional for exact token counts.

[project.optional-dependencies]
exact-tokens = ["tiktoken>=0.7"]
test = ["pytest>=7"]

[project.scripts]
checkmcp = "checkmcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["checkmcp"]

[project.urls]
Homepage = "https://checkmcp.dev"
Repository = "https://github.com/H129hj/checkmcp"
